# VideoPlayer

./: .gitignore  CMakeLists.txt  README.md  VideoPlayer.pro  VideoPlayer_1.pro  copy_dll.bat  main.cpp  main.rc  resources.qrc  说明.txt
ffmpeg/include/libavutil/: common.h
ffmpeg/lib/: avdevice.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
module/DragAbleWidget/: DragAbleWidget.cpp  DragAbleWidget.h  DragAbleWidget.pri  DragAbleWidget.ui
module/VideoPlayer/: CMakeLists.txt  VideoPlayer.pri
module/VideoPlayer/lib/: CMakeLists.txt  lib.pri
module/VideoPlayer/lib/win/ffmpeg/lib/x64/: avcodec.lib  avdevice.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
module/VideoPlayer/lib/win/ffmpeg/lib/x86/: avdevice.lib  avfilter.lib  avformat.lib  avutil-56.def  postproc.lib  swscale.lib
module/VideoPlayer/lib/win32/ffmpeg/lib/: avcodec-56.def  avcodec.lib  avdevice-56.def  avfilter.lib  avutil.lib  postproc.lib  swresample.lib
module/VideoPlayer/lib/win64/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil-54.def  avutil.lib  postproc.lib  swresample.lib  swscale.lib
module/VideoPlayer/src/: AppConfig.cpp  AppConfig.h  main.cpp  types.cpp  types.h
module/VideoPlayer/src/EventHandle/: VideoPlayerEventHandle.cpp  VideoPlayerEventHandle.h
module/VideoPlayer/src/LogWriter/: LogWriter.cpp  LogWriter.h
module/VideoPlayer/src/Mutex/: Cond.cpp  Cond.h  Mutex.cpp  Mutex.h
module/VideoPlayer/src/PcmPlayer/: PcmPlayer.cpp  PcmPlayer.h  PcmPlayer_SDL.cpp  PcmPlayer_SDL.h  PcmVolumeControl.cpp  PcmVolumeControl.h
module/VideoPlayer/src/VideoPlayer/: VideoPlayer.cpp  VideoPlayer.h  VideoPlayer_AudioThread.cpp  VideoPlayer_VideoThread.cpp
module/VideoPlayer/src/VideoPlayer/Audio/: PcmVolumeControl.cpp  PcmVolumeControl.h  VideoPlayer_AudioThread.cpp
module/VideoPlayer/src/VideoPlayer/Video/: VideoFrame.cpp  VideoFrame.h  VideoPlayer_VideoThread.cpp
module/VideoPlayer/src/frame/AudioFrame/: AACFrame.cpp  AACFrame.h  PCMFrame.cpp  PCMFrame.h
module/VideoPlayer/src/frame/VideoFrame/: VideoEncodedFrame.cpp  VideoEncodedFrame.h  VideoFrame.cpp  VideoFrame.h  VideoRawFrame.cpp  VideoRawFrame.h
module/VideoPlayer/src/frame/nalu/: h264.h  h265.h  nalu.cpp  nalu.h
module/VideoPlayer/src/util/: thread.cpp  thread.h  util.cpp  util.h
resources/: main.aps  main.rc  resources.qrc
resources/image/: volume.psd
src/: AppConfig.cpp  AppConfig.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Base/: FunctionTransfer.cpp  FunctionTransfer.h
src/CustomTitleWidget/: CustomTitleWidget.pri  customtitle.cpp  customtitle.h  customtitle.ui  frmmain.cpp  frmmain.h  frmmain.ui  frmmessagebox.cpp  frmmessagebox.h  frmmessagebox.ui  iconhelper.cpp  iconhelper.h  myhelper.h  rc.qrc
src/CustomTitleWidget/image/: black.css  blue.css  gray.css  navy.css
src/Widget/: SetVideoUrlDialog.cpp  SetVideoUrlDialog.h  SetVideoUrlDialog.ui  ShowVideoWidget.cpp  ShowVideoWidget.h  ShowVideoWidget.ui  VideoPlayerWidget.cpp  VideoPlayerWidget.h  VideoPlayerWidget.ui  VideoSlider.cpp  VideoSlider.h  mymessagebox_withTitle.cpp  mymessagebox_withTitle.h  mymessagebox_withTitle.ui
src/videoplayer/: videoplayer.cpp  videoplayer.h  videoplayer.ui  videoplayer_showvideowidget.cpp  videoplayer_showvideowidget.h  videoplayer_showvideowidget.ui  videoplayer_thread.cpp  videoplayer_thread.h
src/videoplayer/widget/: VideoSlider.cpp
